# toy_inference

./: Cargo.toml  build.rs  dump_phi.py  par.c  request.py
csrc/: matmul.c  matmul_cuda.cu  matmul_cuda.h
csrc/model/: Makefile  create_test_data.py  dump_phi.py  phi.c  phi_layers.h  test.c  test_model.py  utils.c  utils.h
csrc/model/include/: ops_cpu.h  phi_all.h  phi_layers.h  phi_utils.h  utils.h
csrc/model/src/: bench_ops.c  generate.c  ops_cpu.c  phi_layers.c  phi_utils.c  run.c  small_test.c  test.c  utils.c
proto/: ll_server.proto
src/: bench.rs  lib.rs  main.rs  nn.rs  server.rs  server_grpc.rs
src/nn/: mod.rs  utils.rs
src/server/: mod.rs
tools/: proto_compile.sh  request.py
