[package]
name = "inference_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bench"
path = "src/bench.rs"

[dependencies]
rayon = "1.10.0"
threadpool = "1.8.1"
rand = "0.8.5"
libc = "0.2.155"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"]}

[build-dependencies]
cc = "1.0.98"
tonic-build = "0.12"
bindgen = "0.69.4"